# FHIRkit

./: .gitignore  DEPLOY.md  LICENSE.md  Pipfile  README.md  pandas_example.py  pyproject.toml  setup.py
FHIRkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt
examples/: 01_load_valueset_from_fhir_ig.ipynb  02_load_synthea.ipynb  pandas_example.py
fhirkit/: AllergyIntolerance.py  BaseModel.py  Bundle.py  CarePlan.py  CareTeam.py  ChoiceTypeMixin.py  ClinicalImpression.py  CodeSystem.py  Composition.py  CompositionValueSet.py  Condition.py  Coverage.py  Device.py  DiagnosticReport.py  DocumentReference.py  Encounter.py  ImagingStudy.py  Immunization.py  Location.py  Medication.py  MedicationAdministration.py  MedicationRequest.py  MedicationStatement.py  Observation.py  OperationOutcome.py  Organization.py  Parameter.py  Patient.py  Practitioner.py  PractitionerRole.py  Procedure.py  Provenance.py  Resource.py  Server.py  SimpleFHIRServer.py  SimpleFHIRStore.py  SupplyDelivery.py  TerminologyServer.py  ValueSet.py  __init__.py  (+7 more)
fhirkit/choice_type/: __init__.py  choice_type.py  validators.py
test/: observation.json  observation_out.json  test_meta.py  test_observation.py  test_reference.py
tiro_fhir/: Bundle.py  CodeSystem.py  CompositionValueSet.py  Observation.py  OperationOutcome.py  Parameter.py  Procedure.py  Resource.py  SCT.py  Server.py  SimpleFHIRServer.py  ValueSet.py  __init__.py  data_types.py  elements.py  metadata_types.py  test.py
tiro_fhir.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+28 files in other folders)
