[tool.poetry]
name = "fhirkit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10"
requests = "*"
tqdm = "*"
pytest = "*"
pytest-check = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
